// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bolt Shape Props variant items: circle 1`] = `
<span class="e-bolt-shape e-bolt-shape--circle">
  <span class="e-bolt-shape__inner">
  </span>
  BDS
</span>
`;

exports[`Bolt Shape Props variant items: none 1`] = `
<span class="e-bolt-shape">
  BDS
</span>
`;

exports[`Bolt Shape Props variant items: square 1`] = `
<span class="e-bolt-shape e-bolt-shape--square">
  <span class="e-bolt-shape__inner">
  </span>
  BDS
</span>
`;

exports[`Bolt Shape default 1`] = `
<span class="e-bolt-shape">
  BDS
</span>
`;
